manifests/monitoring/management/namespace-monitoring.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    gateway-access: "true"
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
